css/base-sass.css
/* ... */
[hidden] {
  display: none; }

html {
  background: #eee;
  color: #000;
  line-height: 1.6;
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%; }

body {
  margin: 0; }

a:active, a:hover {
  outline: 0; }

abbr[title] {
  border-bottom: 1px dotted; }

b, strong {
  font-weight: 700; }

dfn {
  font-style: italic; }

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0; }

mark {
  background: #ff0;
  color: #000; }

code, kbd, pre, samp {
  font-family: monospace, serif;
  font-size: 1em; }

pre {
  white-space: pre-wrap; }

q {
  quotes: "\201C" "\201D" "\2018" "\2019"; }

small {
  font-size: 80%; }

sub, sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }

sup {
  top: -.5em; }

sub {
  bottom: -.25em; }

img {
  border: 0; }

svg:not(:root) {
  overflow: hidden; }

figure {
  margin: 0; }

fieldset {
  border: 0;
  margin: 0;
  padding: 0; }

legend {
  border: 0;
  padding: 0; }

button, input, select, textarea {
  font-family: inherit;
  font-size: 100%;
  margin: 0; }

button, input {
  line-height: normal; }

button, select {
  text-transform: none;
  border: 0; }

button, html input[type=button], input[type=reset], input[type=submit] {
  -webkit-appearance: button;
  cursor: pointer; }

button[disabled], html input[disabled] {
  cursor: default; }

input[type=checkbox], input[type=radio] {
  box-sizing: border-box;
  padding: 0; }

input[type=search] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box; }

input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
  -webkit-appearance: none; }

button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0; }

textarea {
  overflow: auto;
  vertical-align: top; }

table {
  border-collapse: collapse;
  border-spacing: 0;
  /*width: auto !important;  added to over-ride WP plug-in table default width of 100% */ }

table td {
  font-size: .9em;
  line-height: 1.6; }

/* TNA fonts */
/* TNA colours */
/* TNA Icons/Images */
/* TNA global styles */
body {
  font-family: "Open Sans", arial, sans-serif;
  font-size: 16px;
  background-color: #eee;
  line-height: 1.6; }

h1, h2, h3, h4 {
  font-family: "Bitter", "Open Sans", arial, serif;
  font-weight: 400;
  z-index: 2;
  line-height: 1.6;
  letter-spacing: -.025em; }

h1 {
  font-size: 1.75em; }

h2 {
  font-size: 1.5em; }

h3 {
  font-size: 1.3em; }

h4 {
  font-size: 1.2em; }

p {
  margin: 0 0 1.5em; }

a:active, a:link, a:visited {
  color: #2A5DB0;
  text-decoration: none; }

a:hover {
  text-decoration: underline; }

a:focus {
  background-color: #fce45c;
  outline: 3px solid #ebab00;
  color: #222; }

hr {
  height: 1px;
  border: 0;
  margin: 1em 0;
  clear: both;
  width: 100%;
  border-bottom: 1px solid #ECECEC; }

article .entry-content {
  overflow: hidden; }

/**
* Style the image alignment
*/
img.alignright {
  float: right;
  margin: 6px 0 0.5em 0.5em; }

img.alignleft {
  float: left;
  margin: 6px 0.5em 0.5em 0; }

img.aligncenter {
  display: block;
  margin-left: auto;
  margin-right: auto; }

.alignright {
  float: right; }

.alignleft {
  float: left; }

.aligncenter {
  display: block;
  margin-left: auto;
  margin-right: auto; }

.breather-top {
  padding-top: 1em; }

.breather-bottom {
  padding-bottom: 1em; }

.breather-top-bottom {
  padding-top: 1em;
  padding-bottom: 1em; }

.breather {
  padding: 1em; }

#goTop {
  height: 40px;
  width: 40px;
  padding: 10px;
  text-align: center;
  background: whiteSmoke;
  font-weight: bold;
  color: #fff;
  text-decoration: none;
  position: fixed;
  top: 47%;
  right: -100px;
  background: url(../img/icon-32-top.gif) center center no-repeat rgba(0, 0, 0, 0.66);
  background-size: cover;
  z-index: 5000;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%; }

.well {
  background-color: #f3f3f3;
  padding: 20px;
  margin: 0;
  border: none;
  border-radius: 0; }

a#cookieCutter {
  background: url(../img/close-img.png) 0 2px no-repeat;
  margin-left: 10px;
  padding-top: 1px;
  padding-left: 22px;
  text-decoration: none; }

/* TinyMce - list left thumbnail */
.list_left_thumbnail, .list_right_thumbnail {
  margin: 0;
  padding: 0;
  list-style-type: none; }
  .list_left_thumbnail li, .list_right_thumbnail li {
    clear: both;
    width: 100%;
    border-bottom: 1px solid #ECECEC;
    display: inline-block;
    padding: 0 0 10px 0; }
    .list_left_thumbnail li h2, .list_right_thumbnail li h2 {
      padding: 0;
      margin: 0; }
    .list_left_thumbnail li img, .list_right_thumbnail li img {
      float: left;
      width: 210px;
      max-height: 260px;
      padding: 0 10px 0 0;
      margin: 0; }
      @media (max-width: 375px) {
        .list_left_thumbnail li img, .list_right_thumbnail li img {
          width: 100%; } }

/* TinyMce - list right thumbnail */
.list_right_thumbnail li img {
  float: right;
  padding: 0 0 10px 10px; }

/* TNA list styles */
ul, ol {
  padding-left: 1.5em;
  margin: 0 0 1.5em 0;
  /* for consistency with heading and paragraph margins in articles */ }

ul li {
  list-style-image: url("../img/list-bullet.png"); }

ul li, ol li {
  margin: 0 0 .75em 0;
  line-height: 1.6; }

ul li ul, ol li ol {
  margin: 1em 0 0 0; }

.breather p + ul {
  /* all ul within or alongside paragraphs should have margins defined by class
  margin: 1em 0 2em 0; */ }

ul.no-bullet li {
  border-bottom: 1px solid #ddd;
  padding: 10px 0 10px 0;
  list-style-image: none;
  list-style-type: none;
  margin: 0; }

ul.no-bullet li:last-child {
  border-bottom: 0; }

ul.full,
ul.child, ul.sibling, ul.triplets, ul.quadruplets {
  float: left;
  padding-bottom: 10px;
  width: 96%;
  margin: 0; }
/* ... */

